Fix table of content height on small screens

--- a/src/templates/doc.module.css
+++ b/src/templates/doc.module.css
@@ -22,7 +22,7 @@
 }
 
 .maxHscreen50 {
-  height: 50vh;
+  max-height: 50vh;
 }
 
 /* Medium (md) */
